# smart_app_alex

./: .gitignore  README.md  docker-compose.yaml
api-gateway/: main.py
api-gateway/apigateway/: settings.py  urls.py
db/: dockerfile  init.sql
knowledge-base/: dockerfile  main.py
knowledge-base/knowledgebase/: asgi.py  settings.py  urls.py  wsgi.py
kpi-engine/: .gitignore  Dockerfile  LICENSE  README.md  main.py  manage.py  pyproject.toml
kpi-engine/.github/: CODEOWNERS
kpi-engine/.github/workflows/: ci.yml  devsecops.yml
kpi-engine/kpiengine/: asgi.py  settings.py  urls.py  wsgi.py
kpi-engine/src/app/: db.py  main.py  models.py
kpi-engine/src/app/kpi_engine/: grammar.py  kpi_engine.py  kpi_request.py  kpi_response.py
kpi-engine/src/tests/: test_kpi_engine.py
model/: main.py  requirements.txt
model/model/: settings.py  urls.py
